2003-02-26	fabian
    * Fixed general double-width character processing in ARRAY mode
    * Fixed "last line missing" bug in ARRAY mode
    * Fixed "clearBuffer" bug in BUFFER mode
    
2003-02-25	fabian
    * Further optimization of BUFFER method by updating
      less portion of screen
    * Fixed a showCursor bug
      
2003-02-24	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Added highly experimental code to do custom drawing 
      for high speed. Still very buggy. To enable the 
      code, turn on the USE_CUSTOM_DRAWING flag in 
      PseudoTerminal.m, turn on the DEBUG_USE_ARRAY 
      and turn off the DEBUG_USE_BUFFER flags in VT100Screen.m
      
    * Fixed a problem causing huge CPU usage when displaying 
      the bell in tab. Now displaying only if there is a 
      change.
      

2003-02-24	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Fixed and simplified screen updating code.

2003-02-24	fabian
    * Changed version number to 0.6.4
    * Updated help files
    * Fixed a bug in timerTick
    * Fixed a bug that deals non-ASCII characters wrong.
    * Removed the trigger in keyDown in PTYSession.
    * Added an icon in Tab when a bell is received.
    * Now iTerm removes the warning icon when switching tabs.
    
2003-02-22	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Fixed a bug in resizing tabs and window when closing 
      a session.
      
    * Using smaller icon for popup menu in toolbar when 
      toolbar size mode is NSToolbarSizeModeSmall.
      
    * Further speed optimizations by caching rarely changing 
      character attribute dictionaries. We are also not 
      recreating our data stream in VT100Terminal every 
      time we pick off a token. That is too expensive. 
      We just mark our position in the stream and recreate 
      the stream only when we reach the end.
      

2003-02-21	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Manually firing screen update timer after a keyDown 